@@ -1,3 +1,8 @@
+2012-06-17  WOnder93  <omosnacek@gmail.com>
+
+	* MyClass.cs:
+	  Deleted forgotten unused file.
+
 2012-06-15  WOnder93  <omosnacek@gmail.com>
 
 	* AIPlayer.cs:
